# gtk4-rs-core

./: README.md
.github/workflows/: docs.yml
cairo/: Cargo.toml  README.md
cairo/src/: context.rs
cairo/sys/: Cargo.toml
gdk-pixbuf/: Cargo.toml  README.md
gdk-pixbuf/sys/: Cargo.toml
gio/: Cargo.toml  README.md
gio/sys/: Cargo.toml
glib/: Cargo.toml  README.md
glib-macros/: Cargo.toml
glib-macros/src/: lib.rs
glib/gobject-sys/: Cargo.toml
glib/sys/: Cargo.toml
graphene/: Cargo.toml  README.md
graphene/sys/: Cargo.toml
pango/: Cargo.toml  README.md
pango/sys/: Cargo.toml
pangocairo/: Cargo.toml  README.md
pangocairo/sys/: Cargo.toml
