[package]
name = "graphene-rs"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
keywords = ["graphene", "graphene-rs", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://e-monkeys-tech/gtk4-rs-core/stable/latest/docs/graphene/"
version = "0.15.0"
description = "Rust bindings for the Graphene library"
repository = "https://github.com/e-monkeys-tech/gtk4-rs-core"
exclude = [
    "gir-files/*",
]
edition = "2018"

[lib]
name = "graphene"

[features]
dox = ["ffi/dox", "glib/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
glib = { path = "../glib" }
ffi = { package = "graphene-sys", path = "sys" }

[dev-dependencies]
gir-format-check = "^0.1"
